--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>EVs</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -13,6 +13,16 @@
 </head>
 <body>
     <h1>Test</h1>
+    <div class = container>
+
+
+
+
+
+
+
+      
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
