added background picture and lorem text box

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EVs</title>
+    <title>Superbowl for Idiots</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -12,17 +12,17 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Test</h1>
-    <div class = container>
-
-
-
-
-
-
-
+  <section>
+  <!-- <img class="background" src="images/superbowlbackground.png" alt="superbowlbackground"> -->
+  <div class="text">
+      <h2>SUPERBOWL PREDICTOR FOR IDIOTS</h2>
       
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae commodi quam qui consequatur quisquam tenetur, eum placeat nobis voluptatibus ad incidunt quaerat voluptatem velit delectus sed reprehenderit tempora quae voluptatum.</p>
+  
+  
     </div>
+</section>
+
 </body>
 <script src="app.js"></script>
 </html>
