replaced flexbox with css-grid. Able to pull API to console

--- a/index.html
+++ b/index.html
@@ -12,15 +12,40 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class=wrapper>
+    <div class="Intro">
+      Intro and directions: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum ea alias nulla repudiandae voluptas cum, doloribus atque quidem magnam nesciunt suscipit assumenda dolor voluptatem numquam deleniti asperiores autem perferendis.
+    </div> 
+    <div class="KC">
+      KC API here
+    </div>
+    <div class="SF">
+      SF API here
+    </div>
+    <div class="NE">
+        NE API here
+    </div>
+  </div>
+  
+  
+  
+
+
+
+  
+  
+  
+<!--   
+ 
   <section>
-  <!-- INTRO Box for page explanation -->
+  ####INTRO Box for page explanation####
   <div class="intro">
       <h2>SUPERBOWL PREDICTOR FOR IDIOTS</h2>
       
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae commodi quam qui consequatur quisquam tenetur, eum placeat nobis voluptatibus ad incidunt quaerat voluptatem velit delectus sed reprehenderit tempora quae voluptatum.</p>
   </div>
   <div class="flexcontainer">
-    <!-- Flex container for API stuff-->
+    ####Flex container for API stuff####
     <div class="apiflexcontainer">
       
         <div class="chiefsapi">
@@ -31,7 +56,7 @@
           <p>FORTYNINER API data here</p>
         </div>
     </div>
-    <!-- Flex container for rating scales -->
+    ####Flex container for rating scales####
     <div class="ratingflexcontainer">
 
         <div class="fivetofive">
@@ -44,7 +69,7 @@
     </div>
 </div>
   
-</section>
+</section> -->
 
 </body>
 <script src="app.js"></script>
