draft caurosel to replace Divs with particular API data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <div class=wrapper>
     <div class="Intro">
-      Intro and directions: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione rerum ea alias nulla repudiandae voluptas cum, doloribus atque quidem magnam nesciunt suscipit assumenda dolor voluptatem numquam deleniti asperiores autem perferendis.
+      <h1>Superbowl for Dummies</h1>
+        <p>Having trouble deciding which team to root for? See how each team performed in the regular season and decide for yourself</p>
     </div> 
     <div class="KC">
       KC API here
@@ -23,9 +24,18 @@
       SF API here
     </div>
     <div class="NE">
-        NE API here
+      NE API here
+    </div>
+    <div class="carousel">
+        <div class="tip">Sample Info</div>
+        <button id="prevBtn">Prev</button>
+        <button id="nextBtn">Next</button>
     </div>
   </div>
+  
+
+
+
   
   
   
