minimum viable product

--- a/index.html
+++ b/index.html
@@ -15,21 +15,37 @@
   <div class=wrapper>
     <div class="Intro">
       <h1>Superbowl for Dummies</h1>
-        <p>Having trouble deciding which team to root for? See how each team performed in the regular season and decide for yourself</p>
+        <p>Have you been invited to A Superbowl Party but don't know anything about the matchup? This APP takes API of the 2019-2020 regular season and displays each division champions' statistics side by side. Bonus Patriot's stats for personal interest. </p>
     </div> 
     <div class="KC">
-      KC API here
+      <h1>CHIEFS</h1>
+      <p></p>
+      <h4 id="KC1"></h4>
+      <h4 id="KC2"></h4>
+      <h4 id="KC3"></h4>
     </div>
     <div class="SF">
-      SF API here
+      <h1>49ers</h1>
+      <p></p>
+      <h4 id="SF1"></h4>
+      <h4 id="SF2"></h4>
+      <h4 id="SF3"></h4>
     </div>
     <div class="NE">
-      NE API here
+      <h1>PATRIOTS</h1>
+      <p></p>
+      <h4 id="NE1"></h4>
+      <h4 id="NE2"></h4>
+      <h4 id="NE3"></h4>
     </div>
     <div class="carousel">
-        <div class="tip">Sample Info</div>
-        <button id="prevBtn">Prev</button>
-        <button id="nextBtn">Next</button>
+        <!-- <h1>CLICK NEXT TO START</h1> -->
+        <div class="tip"></div>
+          <!-- <p></p> -->
+        <!-- <div id="prevBtn">Prev</div> -->
+        <div id="nextBtn">Next</div>
+    </div>
+    <div id="apioutput">
     </div>
   </div>
   
