--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class=wrapper>
     <div class="Intro">
       <h1>Superbowl for Dummies</h1>
-        <p>Have you been invited to A Superbowl Party but don't know anything about the matchup? This APP takes API of the 2019-2020 regular season and displays each division champions' statistics side by side. Bonus Patriot's stats for personal interest. </p>
+        <p>This APP takes API of the 2019-2020 regular season and displays each division champions' statistics side by side. Bonus Patriot's stats for personal interest. </p>
     </div> 
     <div class="KC">
       <h1>CHIEFS</h1>
